--- a/mobile/package.json
+++ b/mobile/package.json
@@ -18,6 +18,7 @@
     "@expo-google-fonts/inter": "^0.2.3",
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/native": "^6.0.2",
+    "axios": "^1.7.2",
     "clsx": "^2.1.1",
     "expo": "~51.0.17",
     "expo-constants": "~16.0.2",
